--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "football-data-node",
   "version": "1.0.0",
   "description": "A node.js client to football-data.org",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
